# SGMRIQA

./: .gitignore  README.md  index.html  pyproject.toml
SGMRI-QA/data_cleaning/: clean_brain_qa.py  clean_knee_qa.py
SGMRI-QA/data_generation/: generate_qa_gpt4o_brain.py  generate_qa_gpt4o_knee.py
SGMRI-QA/data_preprocessing/brain/: 00_download_and_extract_all.sh  02_split_by_modality.sh
SGMRI-QA/data_preprocessing/knee/: 00_download_and_extract_all.sh  01_extract_slices_with_annotations.sh
scripts/: setup_server.sh
scripts/cleaning/: clean_brain_qa.py  clean_knee_qa.py  enrich_volume_detection.py  fix_detection_plural.py  fix_edema_signal.py  fix_ligament_localization.py  fix_rare_diseases.py
scripts/finetuning/: convert_data.py  qwen3_vl_8b_brains_combined_full.sh  run_qwen3_sft.sbatch
scripts/generation/: launch_image_qa.sh
scripts/preprocessing/brain/: 01_extract_slices_with_annotations.sh  03_generate_json_dataset.py  test_check_train_val_overlap.sh
scripts/preprocessing/knee/: 02_verify_file_counts.sh  03_generate_json_dataset.py
scripts/slurm/: run_llava_med_image.sbatch  run_medgemma_image.sbatch  slurm_run_all.sh  slurm_run_model.sh  submit_v4_all.sh  submit_vqa_full_eval.sh  submit_vqa_full_sharded.sh
src/sgmriqa/: __init__.py  aggregate_results.py  run_ar_only.py  run_evaluation.py  run_inference.py  schemas.py
src/sgmriqa/config/: __init__.py  model_configs.py  paths.py
src/sgmriqa/metrics/: __init__.py  a_score.py  ar_score.py  (+2 more)
tests/: test_evaluation_metrics.py  test_prompt_builder.py  test_prompt_e2e.py  test_runners_dry.py
(+11 files in other folders)
